--- a/RainbowBaby/app/src/main/res/layout/activity_splash.xml
+++ b/RainbowBaby/app/src/main/res/layout/activity_splash.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.qychbb.www.rainbowbaby.SplashActivity">
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/mText"
+        android:layout_gravity="center"
+        android:textSize="@dimen/font_16_size"
+        android:textColor="@color/font_color_black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Hello World!" />
+
+    <include layout="@layout/common_layout_empty"/>
 
 </FrameLayout>
